refactoring + fixing user and auth related issues